[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "residual_learning"
version = "0.0.1"
authors = [
  { name="Paul Hallmann", email="paul-hallmann@web.de" },
]
description = "A package for residual_learning using maniskill as a backend"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xetirian/residual_learning"
Issues = "https://github.com/xetirian/residual_learning/issues"